<resources>
    <string name="app_name">Shindy</string>
    <string name="shindy">Shindy</string>
    <string name="fb_acc_verification_text">For account verificaiton you must sign in with   a Facebook account to use Shindy</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="uniqe_events_for_singles">Uniqe Events for Singles</string>
    <string name="facebook_app_id">434815240293809</string>
    <string name="fb_login_protocol_scheme">fb434815240293809</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile_preferences"><![CDATA[Profile & Preferences]]></string>
    <string name="event_mgmt">Event Mgmt</string>
    <string name="users_mgmt">Users Mgmt</string>
    <string name="host_new_event">Host New Event</string>
    <string name="my_invites">My Invites</string>
    <string name="my_messages">My Messages</string>
    <string name="my_shindigs">My Shindigs</string>
    <string name="logout">Logout</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="preview"><u>Preview</u></string>
    <string name="prefer_to_be_invited_n_with_others_with_in">Prefer to be invited \nwith others with in</string>
    <string name="distance">Distance</string>
    <string name="religion">Religion (optional)</string>
    <string name="gender_preference">Gender Preference (optional)</string>
    <string name="availability">Availability (optional)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="new_users">New Users</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="invite">Invite</string>
    <string name="message">Message</string>
    <string name="show">Show</string>
    <string name="filters">+Filters</string>
    <string name="filtersApl">FILTER APPLIED</string>

    <string name="preference_file_key">prefe_file_key</string>
    <string name="send_label">Done</string>
    <string name="events_you_re_attending">EVENTS YOU’RE ATTENDING</string>
    <string name="invited">INVITED</string>
    <string name="details">Details</string>
    <string name="who_s_invited">WHO\'s INVITED</string>
    <string name="send_invite">SEND INVITE</string>
    <string name="likedEvent">Liked Events</string>
    <string name="blockedEv">Blocked Events</string>
    <string name="eventRev">Event Review</string>
    <string name="event_feedback">Event Feedback</string>
    <string name="save_failed">No changes made</string>
    <string name="reviews"><i>Reviews</i></string>
    <string name="private_host_n">Private Host: %1$s</string>
    <string name="hosted_by_n">Hosted by: %1$s</string>
    <string name="invited_by_n">Invited by: %1$s</string>
    <string name="view_previous_reply">View %1$s previous reply</string>
    <string name="offer_to_pay">Offer to Pay if you accept: $%1s</string>
    <string name="event_sched_n_n">%1$s | %2$s</string>
    <string name="invite_sent_bam">Invite Sent....BAM !</string>
    <string name="name_n_age">%1$s, %2$s</string>
    <string name="list_empty">List Empty</string>
    <string name="expires_n">Expires: %1$s</string>
    <string name="time_start">Time Start</string>
    <string name="date_start">Date Start</string>
    <string name="event_details">Event Details</string>
    <string name="location">Location</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cancel">Cancel</string>
    <string name="co_host">Co-Host</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="max_male">Max Male</string>
    <string name="max_female">Max Female</string>
    <string name="spots">Spots</string>
    <string name="we_charged__">We charged a 10% service fee for each ticket purchased. It is how we keep food on the table.</string>
    <string name="create">Create</string>
    <string name="date_end">Date End</string>
    <string name="time_end">Time End</string>
    <string name="Website">Website</string>
    <string name="website">Website</string>
    <string name="event_successfully_created">Event Successfully Created</string>
    <string name="please_try_again">Please Try Again</string>


    <plurals name="stocks">
        <item quantity="zero">Out of Stock</item>
        <item quantity="one">Stock</item>
        <item quantity="other">Stocks</item>
    </plurals>
    <string name="title_activity_event_details">Event Details</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="im_in">I\'m in</string>
    <string name="like">Like</string>
    <string name="block_event">Block Event</string>
    <string name="second">Lorem ipsum dolor sit amet, eros ut nunc consequat suscipit quis nec dui. Maecenas a augue in odio facilisis pellentesque.  Praesent vestibulum non sapien a scelerisque.</string>
    <string name="long_latin">Lorem ipsum dolor sit amet,Praesent vestibulum non sapien a scelerisque.Lorem ipsum dolor sit amet,Praesent vestibulum non sapien a scelerisque.Lorem ipsum dolor sit amet,Praesent vestibulum non sapien a scelerisque.</string>
    <string name="transition_event_image">transition_event_image</string>
    <string name="price_n">Price: $%1$s</string>
    <string name="location_n">Location: %1$s</string>
    <string name="website_n">Website: %1$s</string>
    <string name="date_n">Date: %1$s %2$s</string>
    <string name="google_API_key">AIzaSyCg3ZLVcw3DanxVvhrUwGIqWFL39bmFnBc</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Allow app to use gps</string>
    <string name="ok">Ok</string>
    <string name="discussion">Discussion</string>
    <string name="zipcode">Zipcode</string>
    <string name="prompt_double_back_exit">Press back again to exit</string>
    <string name="title_activity_event_management">Event Management</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="created_events">Created Events</string>
    <string name="save">Save</string>
    <string name="quick_review">Quick Review</string>
    <string name="rate_the_event">Rate the Event</string>
    <string name="rate_host">Rate your Event host</string>
    <string name="comments_optional">Comments (optional)</string>
    <string name="quick_review_remarks">Thanks. This helps make Shindig awesome</string>
    <string name="submit">Submit</string>


</resources>
