<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/dp30"
    android:layout_marginTop="@dimen/dp20"
    android:fillViewport="true"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="scroll">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp5"
            android:text="Date: 2018-20-20 12:12" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/location" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/price_n" />

        <TextView
            android:id="@+id/tvExpires"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/expires_n"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/long_latin" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10" />

        <TextView
            android:id="@+id/tvWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/website_n"
            android:textStyle="italic" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>