<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_quick_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:text="@string/rate_the_event" />

        <RatingBar
            android:id="@+id/rb_event"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="@dimen/dp10"
            android:numStars="5"
            android:stepSize="0.1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/rate_host" />

        <RatingBar
            android:id="@+id/rb_host"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:numStars="5"
            android:stepSize="0.1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|bottom|left"
            android:layout_marginRight="@dimen/dp20"
            android:text="@string/comments_optional" />

        <EditText
            android:id="@+id/etComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_border_accent"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="6"
            android:paddingBottom="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quick_review_remarks" />

        <Button
            android:id="@+id/btnSubmit"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
