<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:layout_gravity="center"
            android:text="@string/events_you_re_attending"/>
        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp5"
            android:layout_marginEnd="@dimen/dp5"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            />
        <TextView
            android:id="@+id/tv_invite"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Invite Code?"
            android:layout_gravity="end"
            android:textColorLink="@android:color/holo_blue_bright"
            android:textColor="@android:color/holo_blue_bright"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_shindings_attending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout">
    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:layout_below="@+id/rv_shindings_attending"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invited"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp5"
            android:layout_marginEnd="@dimen/dp5"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_shindings_invited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2">

    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:layout_below="@+id/rv_shindings_invited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:visibility="visible"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp5"
            android:background="@drawable/rouded_corner_box"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/ll_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp5"
                android:layout_marginTop="@dimen/dp5"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@drawable/warring"
                    android:tint="@android:color/holo_orange_dark"/>

                <TextView
                    android:id="@+id/list_item_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp5"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp12"
                    android:text="@string/details" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp5"
                android:layout_marginTop="@dimen/dp5"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/star_favorite"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@drawable/persons" />

                <TextView
                    android:id="@+id/list_item_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:gravity="center_vertical"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp12"
                    android:text="@string/who_s_invited" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp5"
                android:layout_marginTop="@dimen/dp5"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@drawable/add_person" />

                <TextView
                    android:id="@+id/list_item_invite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:gravity="center_vertical"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp12"
                    android:text="@string/invite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp5"
                android:layout_marginTop="@dimen/dp5"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@drawable/add_person" />

                <TextView
                    android:id="@+id/list_item_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:gravity="center_vertical"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp12"
                    android:text="@string/send_invite" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
